// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SettingsResetButton dark 테마에서 스냅샷이 일치하는지 확인 1`] = `
<button
  aria-label="설정 초기화"
  className="px-6 py-[18px] flex gap-[10px] items-center cursor-pointer rounded-[14px] font-24-Bold font-koddi css-ixicwg"
  data-testid="reset-settings-button"
  onClick={[MockFunction]}
>
  <svg
    fill="none"
    height="36"
    viewBox="0 0 36 36"
    width="36"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      d="M7.30673 21.75C8.8337 26.5409 13.207 30 18.3636 30C24.7902 30 30 24.6274 30 18C30 11.3726 24.7902 6 18.3636 6C14.0565 6 10.296 8.41319 8.28401 12M11.8182 13.5H6V7.5"
      strokeLinecap="round"
      strokeLinejoin="round"
      strokeWidth="3"
    />
  </svg>
  <div
    data-testid="reset-settings-text"
  >
    설정 초기화
  </div>
</button>
`;

exports[`SettingsResetButton light 테마에서 스냅샷이 일치하는지 확인 1`] = `
<button
  aria-label="설정 초기화"
  className="px-6 py-[18px] flex gap-[10px] items-center cursor-pointer rounded-[14px] font-24-Bold font-koddi css-ehbcqu"
  data-testid="reset-settings-button"
  onClick={[MockFunction]}
>
  <svg
    fill="none"
    height="36"
    viewBox="0 0 36 36"
    width="36"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      d="M7.30673 21.75C8.8337 26.5409 13.207 30 18.3636 30C24.7902 30 30 24.6274 30 18C30 11.3726 24.7902 6 18.3636 6C14.0565 6 10.296 8.41319 8.28401 12M11.8182 13.5H6V7.5"
      strokeLinecap="round"
      strokeLinejoin="round"
      strokeWidth="3"
    />
  </svg>
  <div
    data-testid="reset-settings-text"
  >
    설정 초기화
  </div>
</button>
`;

exports[`SettingsResetButton yellow 테마에서 스냅샷이 일치하는지 확인 1`] = `
<button
  aria-label="설정 초기화"
  className="px-6 py-[18px] flex gap-[10px] items-center cursor-pointer rounded-[14px] font-24-Bold font-koddi css-ixicwg"
  data-testid="reset-settings-button"
  onClick={[MockFunction]}
>
  <svg
    fill="none"
    height="36"
    viewBox="0 0 36 36"
    width="36"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      d="M7.30673 21.75C8.8337 26.5409 13.207 30 18.3636 30C24.7902 30 30 24.6274 30 18C30 11.3726 24.7902 6 18.3636 6C14.0565 6 10.296 8.41319 8.28401 12M11.8182 13.5H6V7.5"
      strokeLinecap="round"
      strokeLinejoin="round"
      strokeWidth="3"
    />
  </svg>
  <div
    data-testid="reset-settings-text"
  >
    설정 초기화
  </div>
</button>
`;
